--- a/locale/en.yml
+++ b/locale/en.yml
@@ -1,4 +1,4 @@
 blomstra-secondary-tags-toggler:
   admin:
     permissions:
-      view_toggler: See secondary tags toggler on discussions
+      view_toggler: Use secondary tags toggler on discussions
